labs/gitops/catalog-coolstore-deploymentconfig.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      app.kubernetes.io/component-source-type: binary
      app.openshift.io/connects-to: catalog-postgresql
      app.openshift.io/vcs-uri: file://target/catalog-1.0-SNAPSHOT.jar
    labels:
      app: coolstore
      app.kubernetes.io/instance: catalog
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v1.0.2
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: coolstore
      app.openshift.io/runtime-version: "11"
    name: catalog-coolstore
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: catalog-coolstore
      app: coolstore
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
        creationTimestamp: null
        labels:
          deploymentconfig: catalog-coolstore
          app: coolstore
          app.kubernetes.io/instance: catalog
          maistra.io/expose-route: "true"
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/cn-project6/catalog-coolstore:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: catalog-coolstore
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: 8443-tcp
            protocol: TCP
          - containerPort: 8778
            name: 8778-tcp
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers: []
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
