labs/gitops/inventory-coolstore-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.kubernetes.io/component-source-type: binary
      app.openshift.io/vcs-uri: file://target/inventory-quarkus-1.0.0-SNAPSHOT-runner.jar
    labels:
      app: coolstore
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v1.0.2
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: coolstore
      app.openshift.io/runtime-version: "11"
    name: inventory-coolstore
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      kind: DeploymentConfig
      name: inventory-coolstore
      uid: 36203896-f08f-4dbe-91ae-c15b19b95fc4
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      deploymentconfig: inventory-coolstore
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
