labs/gitops/inventory-coolstore-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/managed-by: odo
      app.kubernetes.io/managed-by-version: v1.0.2
      app.kubernetes.io/part-of: coolstore
      odo.openshift.io/url-name: inventory
    name: inventory-coolstore
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      kind: DeploymentConfig
      name: inventory-coolstore
      uid: 36203896-f08f-4dbe-91ae-c15b19b95fc4
  spec:
    host: inventory-coolstore-cn-project6.apps.cluster-nantes-c90c.nantes-c90c.example.opentlc.com
    port:
      targetPort: 8080
    to:
      kind: Service
      name: inventory-coolstore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - status: "True"
        type: Admitted
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
